update chinese name

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <td width="68%" valign="top" align="justify">
         <p>
-        Hi! I am Jimmy. </br>
+        Hi! I am Jimmy, and my chinese name is 威政. </br>
         I am attending CMU ETC in 2020 Fall (deferred to 2021 Fall), and currently seeking for internship jobs for game development and software engineering.
         I was previously a <b>research assistant</b> in the <a href='https://snaclab.citi.sinica.edu.tw/' title='SNAC lab'> Strategic Networking and Communications (SNAC) Lab at CITI, Academia Sinica</a>, under the supervision of Prof. Chih-Yu Wang<a href='http://tom.ky/'></a>. 
         My research focus is on <b>recommender systems</b> targeting E-commerce data. 
