--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <img src="images/cmu.png" alt="sym" width="50%"></a>
         <p style="line-height:1.3; font-size:12pt">Carneigie Mellon University<br>
             M.S. in Entertainment Technology<br>
-            deffered until 2021 Fall</p>
+            deffered to 2021 Fall</p>
         </th>
         
         <th width="12.7%" valign="top" align="center">
@@ -178,7 +178,7 @@
     <!-- Paper 1 -->
     <td width="67%" valign="top">
         <p>
-            <a href="http://ceur-ws.org/Vol-2410/paper32.pdf" id="PSAC">
+            <a href="http://ceur-ws.org/Vol-2410/paper32.pdf" id="psac">
             <heading>PSAC: Context-based purchase prediction framework via user’s sequential actions</heading></a>
             <br>
             <u><b>Wei-Cheng Chen</b></u>, Chih-Yu Wang, Su-Chen Lin, Alex Ou, Tzu-Chiang Liou
@@ -231,7 +231,8 @@
         <td width="67%" valign="top">
             <p>
                 <!-- <img src="images/new.png" alt="[NEW]" width="6%" style="border-style: none"> -->
-                <heading>Option pricing via multi-path Autoregressive Monte Carlo approach</heading></a>
+              <a href="https://arxiv.org/abs/1906.06483" id="multipath">
+              <heading>Option pricing via multi-path Autoregressive Monte Carlo approach</heading></a>
                 <br>
                 <u><b>Wei-Cheng Chen</b></u>, Wei-Ho Chung
                 <br>
