--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   
 </head>
 <body>
+  <div>test</div>
   <table width="840" border="0" align="center" border="0" cellspacing="0" cellpadding="20">
     <tr><td>
   
